# ript-cfg

./: .gitignore  .gitignore copy  INSTALL.md  OPENPI_INTEGRATION_PLAN.md  README.md  README_PI0_CFG_INTEGRATION.md  RIPT_VLA_Training_Deep_Dive.md  eval_quest.py  pyproject.toml  requirements.txt  ript_model_analysis.md  train_quest_sft.py  train_ript.py  train_ript_openvla_oft.py  train_ript_pi0.py  目录结构.txt  说明文档.txt
.claude/: settings.json
config/: evaluate.yaml  paths.yaml  train_autoencoder.yaml  train_autoencoder_libero_goal.yaml  train_autoencoder_libero_long.yaml  train_autoencoder_libero_object.yaml  train_autoencoder_libero_spatial.yaml  train_base.yaml  train_base_rl.yaml  train_base_rl_openvla_oft.yaml  train_base_rl_pi0_cfg.yaml  train_fewshot.yaml  train_pi0_cfg_rl.yaml  train_prior.yaml  train_prior_goal.yaml  train_prior_long.yaml  train_prior_object.yaml  train_prior_rl.yaml  train_prior_spatial.yaml  train_rl_openvla_oft_all_task_goal.yaml  train_rl_openvla_oft_all_task_long.yaml  train_rl_openvla_oft_all_task_object.yaml  train_rl_openvla_oft_all_task_spatial.yaml  train_rl_pi0_cfg_all_task_goal.yaml  train_rl_pi0_cfg_all_task_long.yaml  train_rl_pi0_cfg_all_task_object.yaml  train_rl_pi0_cfg_all_task_spatial.yaml
config/algo/: base.yaml  data_collect.yaml  openvla_oft_rl.yaml  pi0_cfg_rl.yaml  quest.yaml  quest_rl.yaml
config/reward_function/: success.yaml
docs/: CFGRL_Alignment_Plan.md  CFGRL_MIGRATION_PLAN.md  CFGRL_PAPER_TO_CODE_ALIGNMENT.md
pi0/: modeling_pi0.py  paligemma_with_expert.py
ript/: model_loader.py
ript/algos/: base.py  (+2 more)
(+101 files in other folders)
